--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,18 +9,9 @@
     }
   ],
   "dependencies": {
-    "com.unity.package-manager-ui": "2.2.0",
-    "com.unity.timeline": "1.1.0",
+    "com.unity.timeline": "1.2.11",
     "com.unity.ugui": "1.0.0",
     "jp.keijiro.klak.hap": "0.1.15",
-    "jp.keijiro.klak.math": "1.0.1",
-    "com.unity.modules.animation": "1.0.0",
-    "com.unity.modules.audio": "1.0.0",
-    "com.unity.modules.director": "1.0.0",
-    "com.unity.modules.imgui": "1.0.0",
-    "com.unity.modules.particlesystem": "1.0.0",
-    "com.unity.modules.physics": "1.0.0",
-    "com.unity.modules.physics2d": "1.0.0",
-    "com.unity.modules.ui": "1.0.0"
+    "jp.keijiro.klak.math": "1.0.1"
   }
 }
