Move dependency list to package.json

--- a/Packages/jp.keijiro.scrubber/package.json
+++ b/Packages/jp.keijiro.scrubber/package.json
@@ -9,5 +9,11 @@
     "repository": "github:keijiro/Scrubber",
     "unity": "2019.2",
     "unityRelease": "1f1", 
-    "version": "0.1.6"
+    "version": "0.1.6",
+    "dependencies": {
+        "com.unity.timeline": "1.2.11",
+        "com.unity.ugui": "1.0.0",
+        "jp.keijiro.klak.hap": "0.1.15",
+        "jp.keijiro.klak.math": "1.0.1"
+    }
 }
