--- a/Packages/jp.keijiro.scrubber/Runtime/Scrubber.asmdef
+++ b/Packages/jp.keijiro.scrubber/Runtime/Scrubber.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "GUID:63ee2b3a69c095740bf1e4ff4d11f294",
         "GUID:39ed5662ff2b1b4c2a4578e668a4ac72",
+        "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
