--- a/Packages/jp.keijiro.scrubber/package.json
+++ b/Packages/jp.keijiro.scrubber/package.json
@@ -11,6 +11,7 @@
     "unityRelease": "1f1", 
     "version": "0.1.7",
     "dependencies": {
+        "com.unity.inputsystem": "1.8.2",
         "com.unity.timeline": "1.8.6",
         "com.unity.ugui": "1.0.0",
         "jp.keijiro.klak.hap": "0.1.20",
